[workspace]
resolver = "2"
members = [
    # "dapps/compound",
    "dapps/concert",
    "dapps/crowdsale-ico",
    "dapps/dao",
    "dapps/dao-light",
    "dapps/dex/factory",
    "dapps/dex/pair",
    "dapps/dutch-auction",
    "dapps/escrow",
    "dapps/feeds/channel",
    "dapps/feeds/router",
    # "dapps/fomo3D",
    "dapps/fungible-token",
    "dapps/gear-lib/derive",
    "dapps/gear-lib/lib",
    # "dapps/identity",
    "dapps/lottery",
    "dapps/multisig-wallet",
    "dapps/multitoken",
    "dapps/nft-pixelboard",
    "dapps/non-fungible-token/nft",
    "dapps/non-fungible-token/nft-marketplace",
    "dapps/non-fungible-token/on-chain-nft",
    "dapps/ping",
    "dapps/RMRK/base",
    "dapps/RMRK/resource",
    "dapps/RMRK/rmrk-token",
    "dapps/rock-paper-scissors",
    "dapps/staking",
    "dapps/supply-chain",
    # "dapps/swap",
]
