[workspace]
resolver = "2"
members = [
    "dapps/concert",
    "dapps/crowdsale",
    "dapps/dao",
    "dapps/dao-light",
    "dapps/dex/factory",
    "dapps/dex/pair",
    "dapps/escrow",
    "dapps/fungible-token",
    "dapps/game-of-chance",
    "dapps/gear-lib/derive",
    "dapps/gear-lib/lib",
    "dapps/identity",
    "dapps/multisig-wallet",
    "dapps/multitoken",
    "dapps/non-fungible-token",
    "dapps/on-chain-nft",
    "dapps/sharded-fungible-token/ft-logic",
    "dapps/sharded-fungible-token/ft-main",
    "dapps/sharded-fungible-token/ft-storage",
    "dapps/staking",
]
