[workspace]
resolver = "2"
members = [
    "dapps/concert",
    "dapps/crowdsale",
    "dapps/dao",
    "dapps/dao-light",
    "dapps/dex/factory",
    "dapps/dex/pair",
    "dapps/escrow",
    "dapps/fungible-token",
    "dapps/game-of-chance",
    "dapps/gear-lib/derive",
    "dapps/gear-lib/lib",
    "dapps/identity",
    "dapps/multisig-wallet",
    "dapps/multitoken",
    "dapps/non-fungible-token/nft",
    "dapps/non-fungible-token/rentable-nft",
    "dapps/on-chain-nft",
    "dapps/sharded-fungible-token/ft-logic",
    "dapps/sharded-fungible-token/ft-main",
    "dapps/sharded-fungible-token/ft-storage",
    "dapps/staking",
]

[patch.crates-io]
sp-core = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
sp-runtime = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
